# gridterm

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
browser/: broker.mjs  package.json
src/: ai_ui.rs  browser.rs  color.rs  crashlog.rs  grid.rs  main.rs  pty.rs  quad.wgsl  renderer.rs
src/ai/: client.rs  config.rs  mod.rs  tools.rs
src/usage/: collector.rs  mod.rs
tests/: selection.rs
