[package]
name = "gridterm"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "29.0"
glyphon = "0.11"
alacritty_terminal = "0.26"
portable-pty = "0.9"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
arboard = "3"
bytemuck = { version = "1", features = ["derive"] }
ureq = { version = "2", features = ["tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
tungstenite = "0.24"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Faster debug builds while still being usable
[profile.dev]
opt-level = 1
